--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.21.0",
     "@hookform/resolvers": "^5.1.1",
+    "@supabase/supabase-js": "^2.50.5",
     "@tailwindcss/vite": "^4.1.11",
-    "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
@@ -32,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "supabase": "^2.30.4",
     "vite": "^7.0.0"
   }
 }
