--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@supabase/supabase-js": "^2.50.5",
     "@tailwindcss/vite": "^4.1.11",
-    "pdfjs-dist": "^3.4.120",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
     "react-hot-toast": "^2.5.2",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^7.6.3",
     "react-select": "^5.10.2",
     "tailwindcss": "^4.1.11",
