adding the repost trip and customize the toaster

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -339,3 +339,7 @@ entrypoint = "./functions/create-trip/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/create-trip/*.html" ]
+
+[functions.repost-trip]
+entrypoint = "./functions/repost-trip/index.js"
+verify_jwt = false
